--- a/package.json
+++ b/package.json
@@ -43,7 +43,11 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
@@ -54,6 +58,8 @@
   "devDependencies": {
     "@types/jest": "^29.5.8",
     "@types/leaflet": "^1.9.8",
+    "@types/leaflet.heat": "^0.2.4",
+    "@types/node": "^24.3.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
